[chromium] Color profiles are incorrect for images without premultiplied alpha https://bugs.webkit.org/show_bug.cgi?id=75999

Reviewed by Stephen White.

Source/WebCore:

Don't apply the color profile if the user has requested separate alpha.

Test: fast/canvas/webgl/texture-color-profile.html

* platform/image-decoders/skia/ImageDecoderSkia.cpp:
(WebCore::ImageFrame::setStatus):

LayoutTests:

Verify that the image's contents don't get destroyed if using both
separate alpha as well as the browser's colorspace conversion.

* fast/canvas/webgl/resources/tan-1x1-with-alpha.png: Added.
* fast/canvas/webgl/texture-color-profile-expected.txt: Added.
* fast/canvas/webgl/texture-color-profile.html: Added.

Canonical link: https://commits.webkit.org/92903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104732 268f45cc-cd09-0410-ab3c-d52691b4dbfc